--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://samueltommy.github.io/Charcoal-TSBU",
   "name": "charcoal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "next build",
+    "deploy": "gh- pages -d build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
